# PGK_Solids-of-Revolution

./: CMakeLists.txt  Doxyfile  main.cpp
debug/: linetest.geo  linetest_non-volume solid.geo  linetest_pentagram.geo  linetest_planar_XY.geo  linetest_square.geo  linetest_triangle.geo
include/: Frame.h  GUI.h  GUIMyFrame1.h  mesh.h  vecmat.h
src/: Frame.cpp  GUI.cpp  GUIMyFrame1.cpp  mesh.cpp  vecmat.cpp
